--- a/resume.html
+++ b/resume.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: post
 ---                      
                                                  
 <main class="content" role="main">  
