--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-layout: headless
+layout: default
 ---                      
                                                  
 <main class="content" role="main">  
