--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: headless
 ---                      
                                                  
 <main class="content" role="main">  
